# opus

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  Makefile.am  Makefile.mips  Makefile.unix  README  azure-buildpipeline.yaml  config.h.in  opus_config.cmake  opus_functions.cmake  opus_sources.cmake  silk_headers.mk  silk_sources.mk
.github/: build_cmake.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  clang-format.yml  cmake.yml  cmake_build.yml
celt/: _kiss_fft_guts.h  arch.h  bands.c  bands.h  celt.c  celt.h  celt_decoder.c  celt_encoder.c  celt_lpc.c  celt_lpc.h  cpu_support.h  cwrs.c  cwrs.h  ecintrin.h  entcode.c  entcode.h  entdec.c  entdec.h  entenc.c  entenc.h  fixed_c5x.h  fixed_c6x.h  fixed_debug.h  fixed_generic.h  float_cast.h  kiss_fft.c  kiss_fft.h  laplace.c  laplace.h  mathops.c  mathops.h  mdct.c  mdct.h  modes.c  modes.h  opus_custom_demo.c  os_support.h  pitch.c  pitch.h  quant_bands.c  (+10 more)
celt/arm/: arm_celt_map.c  armcpu.c  armcpu.h  celt_fft_ne10.c  celt_mdct_ne10.c  celt_neon_intr.c  fft_arm.h  fixed_armv4.h  fixed_armv5e.h  kiss_fft_armv4.h  kiss_fft_armv5e.h  mdct_arm.h  pitch_arm.h  pitch_neon_intr.c
celt/dump_modes/: dump_modes.c  dump_modes_arch.h  dump_modes_arm_ne10.c
celt/mips/: celt_mipsr1.h  fixed_generic_mipsr1.h  kiss_fft_mipsr1.h  mdct_mipsr1.h  pitch_mipsr1.h  vq_mipsr1.h
celt/tests/: test_unit_cwrs32.c  test_unit_dft.c  test_unit_entropy.c  test_unit_laplace.c  test_unit_mathops.c  test_unit_mdct.c  test_unit_rotation.c  test_unit_types.c
celt/x86/: celt_lpc_sse.h  celt_lpc_sse4_1.c  pitch_sse.c  pitch_sse.h  pitch_sse2.c  pitch_sse4_1.c  vq_sse.h  vq_sse2.c  x86_celt_map.c  x86cpu.c  x86cpu.h
cmake/: CFeatureCheck.cmake  CmakeTest.cmake  OpusConfig.cmake  OpusFunctions.cmake  OpusPackageVersion.cmake  OpusSources.cmake  config.h.cmake.in  cpu_info_by_asm.c  cpu_info_by_c.c  vla.c
dnn/: ceps_vq_train.c  dump_data.c  lpcnet.c  lpcnet_dec.c  lpcnet_enc.c  lpcnet_plc.c  parse_lpcnet_weights.c  pitch.c
dnn/doc/: Makefile
doc/: trivial_example.c
include/: opus.h  opus_custom.h  opus_defines.h  opus_multistream.h  opus_projection.h  opus_types.h
scripts/: ci_generator.py  cmake.py  github_action.py  run-clang-format.py
silk/: A2NLSF.c  API.h  CNG.c  HP_variable_cutoff.c  Inlines.h  LPC_analysis_filter.c  LPC_fit.c  LPC_inv_pred_gain.c  LP_variable_cutoff.c  MacroCount.h  MacroDebug.h  NLSF2A.c  NLSF_VQ.c  NLSF_VQ_weights_laroia.c  NLSF_decode.c  NLSF_del_dec_quant.c  NLSF_encode.c  NLSF_stabilize.c  NLSF_unpack.c  NSQ.c  NSQ.h  NSQ_del_dec.c  PLC.c  PLC.h  SigProc_FIX.h  VAD.c  VQ_WMat_EC.c  ana_filt_bank_1.c  biquad_alt.c  bwexpander.c  bwexpander_32.c  check_control_input.c  code_signs.c  control.h  control_SNR.c  control_audio_bandwidth.c  control_codec.c  debug.c  debug.h  dec_API.c  (+58 more)
silk/arm/: LPC_inv_pred_gain_arm.h  LPC_inv_pred_gain_neon_intr.c  NSQ_del_dec_arm.h  NSQ_del_dec_neon_intr.c  NSQ_neon.c  NSQ_neon.h  SigProc_FIX_armv4.h  SigProc_FIX_armv5e.h  arm_silk_map.c  biquad_alt_arm.h  biquad_alt_neon_intr.c  macros_armv4.h  macros_armv5e.h
silk/fixed/: LTP_analysis_filter_FIX.c  LTP_scale_ctrl_FIX.c  apply_sine_window_FIX.c  autocorr_FIX.c  burg_modified_FIX.c  corrMatrix_FIX.c  encode_frame_FIX.c  find_LPC_FIX.c  find_LTP_FIX.c  find_pitch_lags_FIX.c  find_pred_coefs_FIX.c  k2a_FIX.c  k2a_Q16_FIX.c  main_FIX.h  noise_shape_analysis_FIX.c  pitch_analysis_core_FIX.c  process_gains_FIX.c  regularize_correlations_FIX.c  residual_energy16_FIX.c  residual_energy_FIX.c  schur64_FIX.c  schur_FIX.c  structs_FIX.h  vector_ops_FIX.c  warped_autocorrelation_FIX.c
silk/fixed/arm/: warped_autocorrelation_FIX_arm.h  warped_autocorrelation_FIX_neon_intr.c
silk/fixed/mips/: noise_shape_analysis_FIX_mipsr1.h  prefilter_FIX_mipsr1.h  warped_autocorrelation_FIX_mipsr1.h
silk/fixed/x86/: burg_modified_FIX_sse4_1.c  prefilter_FIX_sse.c  vector_ops_FIX_sse4_1.c
silk/float/: LPC_analysis_filter_FLP.c  LPC_inv_pred_gain_FLP.c  LTP_analysis_filter_FLP.c  LTP_scale_ctrl_FLP.c  SigProc_FLP.h  apply_sine_window_FLP.c  autocorrelation_FLP.c  burg_modified_FLP.c  bwexpander_FLP.c  corrMatrix_FLP.c  encode_frame_FLP.c  energy_FLP.c  find_LPC_FLP.c  find_LTP_FLP.c  find_pitch_lags_FLP.c  find_pred_coefs_FLP.c  inner_product_FLP.c  k2a_FLP.c  main_FLP.h  noise_shape_analysis_FLP.c  pitch_analysis_core_FLP.c  process_gains_FLP.c  regularize_correlations_FLP.c  residual_energy_FLP.c  scale_copy_vector_FLP.c  scale_vector_FLP.c  schur_FLP.c  sort_FLP.c  structs_FLP.h  warped_autocorrelation_FLP.c  wrappers_FLP.c
silk/mips/: NSQ_del_dec_mipsr1.h  macros_mipsr1.h  sigproc_fix_mipsr1.h
silk/tests/: test_unit_LPC_inv_pred_gain.c
silk/x86/: NSQ_del_dec_sse4_1.c  NSQ_sse4_1.c  SigProc_FIX_sse.h  VAD_sse4_1.c  VQ_WMat_EC_sse4_1.c  main_sse.h  x86_silk_map.c
src/: analysis.c  analysis.h  mapping_matrix.c  mapping_matrix.h  mlp.c  mlp.h  mlp_data.c  opus.c  opus_compare.c  opus_decoder.c  opus_demo.c  opus_encoder.c  opus_multistream.c  opus_multistream_decoder.c  opus_multistream_encoder.c  opus_private.h  opus_projection_decoder.c  opus_projection_encoder.c  repacketizer.c  repacketizer_demo.c  tansig_table.h
tests/: opus_benchmark.c  opus_decode_fuzzer.c  opus_encode_regressions.c  test_opus_api.c  test_opus_common.h  test_opus_decode.c  test_opus_encode.c  test_opus_encode_fuzz.c  test_opus_padding.c  test_opus_projection.c  test_opus_snr.c
win32/: config.h
